[package]
name = "nuclear"
version = "0.1.0"
edition = "2021"

[dependencies]
bytestream = "0.4"
thiserror = "1.0"
png = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

eframe = { version = "0.19", optional = true }
tinyfiledialogs = { version = "3.9", optional = true }

[features]
gui = ["eframe", "tinyfiledialogs"]

[[bin]]
name = "nuclear-egui"
path = "src/main.rs"
required-features = ["gui"]

[[example]]
name = "test"

[[example]]
name = "projtest"

[[example]]
name = "projload"